# Prove

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/01_single_process_workflow/: description.txt  property.prop  trace.csv
examples/02_two_concurrent_processes/: description.txt  property.prop  trace.csv
examples/03_client_server_messages/: description.txt  property.prop  trace.csv
examples/04_yesterday_operator/: description.txt  property.prop  trace.csv
examples/05_since_operator/: description.txt  property.prop  trace.csv
examples/06_historically_operator/: description.txt  property.prop  trace.csv
examples/07_epsilon_ordering/: description.txt  property.prop  trace.csv
examples/08_complex_boolean/: description.txt  property.prop  trace.csv
examples/09_two_process_safety/: description.txt  property.prop  trace.csv
examples/100_self_since_two_proc/: description.txt  property.prop  trace.csv
examples/101_nested_since_formula/: description.txt  property.prop  trace.csv
examples/102_disjunction_message_side/: description.txt  property.prop  trace.csv
examples/103_epsilon_three_proc_ordering/: description.txt  property.prop  trace.csv
examples/104_yesterday_chain_messages/: description.txt  property.prop  trace.csv
examples/105_fan_out_with_since/: description.txt  property.prop  trace.csv
examples/10_message_passing_response/: description.txt  property.prop  trace.csv
examples/11_three_process_paper_example/: description.txt  property.prop  trace.csv
prove/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py
(+346 files in other folders)
