[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prove"
version = "0.1.0"
description = "PROVE: Partial oRder Verification Engine — Runtime verification of EPLTL properties over partial order executions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Doron Peled and collaborators"},
]
keywords = ["runtime-verification", "temporal-logic", "partial-order", "distributed-systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "sly>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "graphviz>=0.20",
    "black",
    "isort",
]

[project.scripts]
prove = "prove.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["prove"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
